--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1581,6 +1581,8 @@ pysensibo==1.0.3
 pyserial-asyncio==0.4
 
 # homeassistant.components.acer_projector
+# homeassistant.components.irman
+# homeassistant.components.irtoy
 # homeassistant.components.zha
 pyserial==3.4
 
