Initial commit of amp control skelitan

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -372,6 +372,7 @@ homeassistant/components/somfy/* @tetienne
 homeassistant/components/sonarr/* @ctalkington
 homeassistant/components/songpal/* @rytilahti @shenxn
 homeassistant/components/sonos/* @amelchio
+homeassistant/components/sonyamp/* @696GrocuttT
 homeassistant/components/spaceapi/* @fabaff
 homeassistant/components/speedtestdotnet/* @rohankapoorcom
 homeassistant/components/spider/* @peternijssen
